<resources>
    <string name="app_name">امان الشرق</string>
    <string name="skip">تخطي</string>
    <string name="email">البريد الالكتروني</string>
    <string name="password">كلمة السر</string>
    <string name="sigin">تسجيل الدخول</string>
    <string name="next">فيما بعد</string>
    <string name="name">الاسم</string>
    <string name="phone">رقم الهاتف</string>
    <string name="conferim_password">تأكيد كلمة السر</string>
    <string name="submit">تسجيل</string>
    <string name="sign_up">ليس لديك حساب ؟ حساب جديد</string>
    <string name="preference_file_key" translatable="false">keyfile</string>
    <string name="token" translatable="false">token</string>
    <string name="number_plate_car">رقم لوحة السيارة</string>
    <string name="km_number">قراءة العداد</string>
    <string name="shape">فئة</string>
    <string name="motor_number">رقم المحرك</string>
    <string name="model">موديل</string>
    <string name="type">النوع</string>
    <string name="production_year">سنة الانتاج</string>
    <string name="chassis_no">رقم الهيكل</string>
    <string name="done">تم</string>
    <string name="scan_invoies">تصوير الفاتورة</string>
    <string name="_6_mouth">6 اشهر</string>
    <string name="_12_mouth">12 شهر</string>
    <string name="_24_mouth">24 شهر</string>
    <string name="km">ك.م</string>
    <string name="field_empty_email">يرجي ادخال البريد الالكتروني</string>
    <string name="vaild_email">يرجي ادخال البريد بشكل صحيح</string>
    <string name="field_empty_password">يرجي ادخال كلمة السر</string>
    <string name="password_8_charaters">لقد ادخلت عدد حروف اقل من ثمانية</string>
    <string name="pasword_match">كلمة السر غير متوافقة</string>
    <string name="brands">الماركة</string>
    <string name="price">:سعر</string>
    <string name="km_package">ك.م</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="car_name">اسم السيارة:</string>
    <string name="warranty">ضمان</string>
    <string name="default_notification_channel_id" translatable="false">com.example.amanelshark.test</string>
    <string name="period">": الفترة "</string>
    <string name="add_car">اضافة سيارة</string>
    <string name="warranty_package">باقات تأمين أمان الشرق</string>
    <string name="name_profile">الاسم</string>
    <string name="email_profile">الايميل</string>
    <string name="phone_profile">"الهاتف "</string>
    <string name="profile">الملف الشخصي</string>
    <string name="cars_list">السيارات</string>
    <string name="car_name_profile">نوع السيارة</string>
    <string name="warranty_profile">الضمان</string>
    <string name="notification_title_bar">الاشعارات</string>
    <string name="settings_title_bar">الاعدادات</string>
    <string name="requests_title_bar">الطلبات</string>
    <string name="home_title_bar">الرئيسية</string>
    <string name="car_details">تفاصيل السيارة</string>
    <string name="details_payment">تفاصيل الدفع</string>
    <string name="startdate_cardetails">تاريخ البدء</string>
    <string name="period_cardetails">المدة</string>
    <string name="havenot_warrenty_message">ليس لديك ضمان حتي الان</string>
    <string name="make_warranty">اختر الباقات</string>
    <string name="request_id">رقم الطلب</string>
    <string name="prices">السعر</string>
    <string name="status">الحالة</string>
    <string name="complet_your_payment">انهاء اجراءات الدفع</string>
    <string name="your_payment">تفاصيل الدفع</string>
    <string name="center_services">مركز صيانة</string>
    <string name="details_request">تفاصيل الطلب</string>
    <string name="your_rquest">تفاصيل طلبك</string>
    <string name="package_name">فترة الباقة</string>
</resources>
