<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:cardElevation="10dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<TextView

    android:layout_width="0dp"
    android:layout_weight="5"
    android:layout_height="wrap_content"
    android:text="@string/period"
    android:textAlignment="center"
    android:textSize="20dp"
    >

</TextView>
    <TextView
        android:id="@+id/name_package"
        android:layout_width="0dp"
        android:layout_weight="5"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        tools:text=" سيارة">

    </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/km_package"
            android:textAlignment="center"
            android:textSize="20dp">

        </TextView>
        <TextView
            android:id="@+id/km_package"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            tools:text=" 1000000">

        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAlignment="center"
            android:textSize="20dp"
            >

        </TextView>
        <TextView
            android:id="@+id/price_package"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            tools:text=" 100$">

        </TextView>
    </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>